dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec: {}
status: {}
