dev/ai-chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: ai-chatbot
  namespace: dev 
  labels:
    app: ai-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-chatbot
  template: 
    metadata:
      labels:
        app: ai-chatbot
    spec:
      containers:
      - name: ai-agent
        image: eb300/ai-agent:latest
        ports:
          - containerPort: 8000 
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
